added availability router and model
