# server/swagger.json
@@ -227,7 +227,7 @@
           }
         }
       },
-      "/availability/{groupMemberId}/": {
+      "/groups/{groupMemberId}/availability": {
         "get": {
           "tags": [
             "Availability"
@@ -244,6 +244,64 @@
             }
           ],
           "description": "Get availability from groupMemberId",
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK"
+            }
+          }
+        }
+      },
+      "/groups/availability": {
+        "post": {
+          "tags": [
+            "Availability"
+          ],
+          "summary": "Update availability information of current group member",
+          "parameters": [
+            {
+              "name": "groupMemberId",
+              "in": "formData",
+              "description": "the id of group member",
+              "type": "integer",
+              "format": "int64",
+              "required": true
+            },
+            {
+              "name": "availabilityIds",
+              "in": "formData",
+              "description": "the ID of availability",
+              "type": "array",
+              "items": {
+                "type": "integer",
+                "format": "int64"
+              },
+              "required": true
+            },
+            {
+              "name": "startTimes",
+              "in": "formData",
+              "description": "the datetime of startTimes",
+              "type": "array",
+              "items": {
+                "type": "date-time"
+              },
+              "required": true
+            },
+            {
+              "name": "endTimes",
+              "in": "formData",
+              "description": "the datetime of endTimes",
+              "type": "array",
+              "items": {
+                "type": "date-time"
+              },
+              "required": true
+            }
+          ],
+          "description": "update availability information of group member",
           "produces": [
             "application/json"
           ],
